<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/label_quest"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/message" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/nom"/>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/prenom" />


        <Button
            android:id="@+id/valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_valider" />

        <Button
            android:id="@+id/vider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_vider" />


    </LinearLayout>
</RelativeLayout>